--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Your Name | Portfolio</title>
+    <title>Divija Pilla-Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <style>
     	html {
@@ -110,3 +110,4 @@
 	</script>
 </body>
 </html>
+
